--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <span class="margin"> |</span>
 <span class="margin"> WEB DEVELOPER</span>
 <p>
-an electronic device which is capable of receiving information (data) in a particular form and of performing a sequence of operations in accordance with a predetermined but variable set of procedural instructions (program) to produce a result in the form of information or signals.
-<p style="text-align:right"><b>--shubh13m</b>
+Energetic Fresher holding B. Tech Degree, having good knowledge in computer subjects with the ability to update and take new concepts rapidly. An enthusiastic team player with can-do attitude, management skills and a strong desire to work in the software field.<p style="text-align:right"><b>--shubh13m</b>
 </p>
 </div>
 <div class="footer">
