--- a/inside/jaago/page.html
+++ b/inside/jaago/page.html
@@ -4,7 +4,13 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta charset="UTF-8">
         <title>JAAGO</title>
-
+                <link rel="stylesheet" href="css/responsiveslides.css">
+        <link rel="stylesheet" href="css/demo.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+        <script src="js/responsiveslides.min.js"></script>
     </head>
 
     <body>
