--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 <p>
 Energetic Fresher holding B. Tech Degree, having good knowledge in computer subjects with the ability to update and take new concepts rapidly. An enthusiastic team player with can-do attitude, management skills and a strong desire to work in the software field.<p style="text-align:right"><b>--shubh13m</b>
 </p>
+<a><p id="demo"></p></a>
+
 <script>
-document.write(5 + 6);
+document.getElementById("demo").innerHTML =
+Math.floor(Math.random() * 100) + 1;
 </script>
 </div>
 <div class="footer">
