--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ document.getElementById("demo").innerHTML =
 Math.floor(Math.random() * 100) + 1;
 </script>*/
 --->
-<a><script>
+<a>shubh<script>
 document.write(Math.floor(Math.random() * 100) + 1);
 </script>
 </a>
