--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ document.getElementById("demo").innerHTML =
 Math.floor(Math.random() * 100) + 1;
 </script>*/
 --->
-<a>shubh<script>
+<a href="https://www.netflix.com/watch/70273997"><h2><b>Watch Now</b></h2><script>
 document.write(Math.floor(Math.random() * 100) + 1);
 </script>
 </a>
