--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@ Energetic Fresher holding B. Tech Degree, having good knowledge in computer subj
 document.getElementById("demo").innerHTML =
 Math.floor(Math.random() * 100) + 1;
 </script>*/
---->
+
 <a href="https://www.netflix.com/watch/70273997"><h2><b>Watch Now</b></h2><script>
 document.write(Math.floor(Math.random() * 100) + 1);
 </script>
 </a>
+--->
+
+<script language="JavaScript">picklink()</script>
 
 </div>
 <div class="footer">
@@ -45,5 +48,9 @@ document.write(Math.floor(Math.random() * 100) + 1);
 <div class="social">
 <a href="">shubh13m.github.io</a>
 </div>
+<script> function picklink(){
+var linknum = Math.floor(Math.random() * 100) + 1;
+document.write('<a href="https://www.netflix.com/watch/702739' + linknum + '">Watch Now</a>');
+}
 </body>
 </html>
