--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 <title>Hi! I'm SHUBHAM PANDEY</title>
+<script language="JavaScript"> function picklink(){
+var linknum = Math.floor(Math.random() * 100) + 1;
+document.write('<a href="https://www.netflix.com/watch/702739' + linknum + '">Watch Now</a>');
+}</script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/custom.css">
@@ -48,9 +52,6 @@ document.write(Math.floor(Math.random() * 100) + 1);
 <div class="social">
 <a href="">shubh13m.github.io</a>
 </div>
-<script> function picklink(){
-var linknum = Math.floor(Math.random() * 100) + 1;
-document.write('<a href="https://www.netflix.com/watch/702739' + linknum + '">Watch Now</a>');
-}
+
 </body>
 </html>
