--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ document.write(Math.floor(Math.random() * 100) + 1);
 <a href="inside/blog.html"><img src="res/blog.png" title="BLOG"></a>
 </div>
 <div class="social">
-<a href="">linkedin.com/in/shubh13m/</a>
+<a href="https://www.linkedin.com/in/shubh13m/">linkedin.com/in/shubh13m/</a>
 </div>
 <div class="social">
-<a href="">facebook.com/shubh13m</a>
+<a href="https://www.instagram.com/shubh13m/">instagram.com/shubh13m/</a>
 </div>
 <div class="social">
 <a href="">shubh13m.github.io</a>
